tests/snapshots/examples_fixtures/errors__unknown_infix_operator_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/unknown_infix_operator_error.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found %.

  --> examples/errors/unknown_infix_operator_error.flx:3:4
  |
3 | 1 %% 2;
  |    ^
== stdout ==
<not executed>
